--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
 
 
-	<body style="cursor: auto;">
+	<body style="cursor: auto; min-height: 750px" >
 		<div id="app"></div>
 <!-- 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
 <!-- 
