--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>balanza</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" type="text/css" href="./dist/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="./dist/css/jquery-ui-1.9.2.custom.css">
+
 	</head>
 	<style>
 		#draggable {
@@ -14,20 +15,13 @@
 		}
 	</style>
 
-	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-
 
 	<body style="cursor: auto; min-height: 750px" >
 		<div id="app"></div>
-<!-- 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
-<!-- 
-		<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
-				<script src="./dist/js/jquery-1.11.1.min.js"></script>
+		<script src="./dist/js/jquery-1.11.1.min.js"></script>
 		<script src="./dist/js/jquery-ui-1.9.2.custom.min.js"></script>
-
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<script src="./dist/js/popper.min.js"></script>
+		<script src="./dist/js/bootstrap.min.js"></script>
 		<script src="./dist/build.js"></script>
 	</body>
 </html>
